tests/error/poly_errors_py312/non_nat1.py
from guppylang.decorator import guppy


@guppy
def main[I: int]() -> None:
    pass


guppy.compile(main)
