tests/error/poly_errors_py312/non_nat1.err
Error: Unsupported (at $FILE:5:12)
  | 
3 | 
4 | @guppy
5 | def main[I: int]() -> None:
  |             ^^^ `int` generic parameters are not supported

Guppy compilation failed due to 1 previous error
